# Chat-Bot

./: .gitignore  README.md  chat.py  pyproject.toml
data/: responses.json
src/chatbot/: __init__.py  app.py  bot.py  storage.py  ui.py
