[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-ey-bot"
version = "2.0.0"
description = "Chat-Ey Bot desktop chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "customtkinter>=5.2.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
